artifacts/verifier_reports/v0.3.1/verified/20260105_internal_me/VERIFIER_REPORT.md
# Verifier Report: v0.3.1

## Verifier Information

- **Name/Handle**: internal_me
- **Verifier Kind**: internal
- **Date (UTC)**: 2026-01-05
- **Report Version**: 1

## Environment

### System

- **OS**: Ubuntu 24.04.3 LTS
- **Architecture**: x86_64
- **Kernel**: Linux 6.14.0-37-generic

### Runtime

- **Node Version**: v24.11.1
- **npm Version**: 11.6.2

## Source Verification

### Archive Hash

```
Source archive: source.tar.gz
Expected SHA256: edf32ff6f349e1ba091c8aced1372ccbcb024d4d20f43633d1fd29c15a85e5b6
Actual SHA256:   edf32ff6f349e1ba091c8aced1372ccbcb024d4d20f43633d1fd29c15a85e5b6
Match: YES
```

### Git Tag

```
Tag: v0.3.1
Commit: 346f2c71f2ed2cfef70c3b88fdae358992ae6723
Expected: 346f2c71f2ed2cfef70c3b88fdae358992ae6723
Match: YES
```

## Build Verification

### npm ci

```
Exit code: 0
Warnings: none
Errors: none
```

### npm run build

```
Exit code: 0
Output: PASS
```

### npm run lint:banned

```
Exit code: 0
Result: PASSED: No violations found
```

## Test Results

### npm test

```
Total tests: 322
Passed: 322
Failed: 0
Skipped: 0
```

## Golden Suite Results

### npm run golden

```
Passed: 10
Failed: 0
Changed: 0
New: 0
```

## Summary

### Overall Result: PASS

### Issues Found

None

### Notes

- This is an internal self-verification report for v0.3.1 (bundle contract milestone).
- Added BUNDLE_SPEC.md and 23 docs-driven invariant tests.
- No kernel semantics changed. Golden hashes unchanged.

## Attestation

I verify that:

- [x] I ran all verification steps myself
- [x] I used a clean environment (fresh clone, `npm ci`)
- [x] I used the exact Node version (24.11.1)
- [x] All results reported above are accurate

Signed: internal_me
Date: 2026-01-05

---

*Report format version: 1.0*
*Generated for: context-engine-kernel v0.3.1*
